artifacts/getting-started/httpbin-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
spec:
  hostnames:
  - httpbin.example.com
  parentRefs:
  - name: eg
  rules:
  - backendRefs:
    - name: httpbin
      port: 8000
